use pdfx by kobayashi

--- a/pdf_2pain_viewer/web/manifest.json
+++ b/pdf_2pain_viewer/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "pdf_2pain_viewer",
-    "short_name": "pdf_2pain_viewer",
+    "name": "flutter2023",
+    "short_name": "flutter2023",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
