--- a/pdf_2pain_viewer/android/app/src/main/AndroidManifest.xml
+++ b/pdf_2pain_viewer/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pdf_2pain_viewer">
-   <application
-        android:label="pdf_2pain_viewer"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
+        android:label="flutter2023"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
