--- a/pdf_2pain_viewer/windows/runner/Runner.rc
+++ b/pdf_2pain_viewer/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "pdf_2pain_viewer" "\0"
+            VALUE "FileDescription", "flutter2023" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "pdf_2pain_viewer" "\0"
+            VALUE "InternalName", "flutter2023" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "pdf_2pain_viewer.exe" "\0"
-            VALUE "ProductName", "pdf_2pain_viewer" "\0"
+            VALUE "OriginalFilename", "flutter2023.exe" "\0"
+            VALUE "ProductName", "flutter2023" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
